--- a/tests/integration/targets/axway_cft_facts/tasks/httpapi.yaml
+++ b/tests/integration/targets/axway_cft_facts/tasks/httpapi.yaml
@@ -3,6 +3,7 @@
   find:
     paths: "{{ role_path }}/tests/httpapi"
     patterns: "{{ testcase }}.yaml"
+    use_regex: true
   register: test_cases
   delegate_to: localhost
 
