--- a/tests/integration/targets/axway_cft_facts/tests/httpapi/facts.yaml
+++ b/tests/integration/targets/axway_cft_facts/tests/httpapi/facts.yaml
@@ -4,4 +4,20 @@
 
 - name: Validate facts
   assert:
-  - True
+    that:
+    - axway_cft_version is defined
+    - axway_cft_version == '3.3.2'
+    - axway_cft_level is defined
+    - axway_cft_level == ''
+    - axway_cft_system is defined
+    - axway_cft_system == 'unix'
+    - axway_cft_server_time is defined
+    - axway_cft_server_time == '1526301034000'
+    - axway_cft_server_utc is defined
+    - axway_cft_server_utc == '2'
+    - axway_cft_multinode_enabled is defined
+    - not (axway_cft_multinode_enabled | bool)
+    - axway_cft_cg_enabled is defined
+    - not (axway_cft_cg_enabled | bool)
+    - axway_cft_instance_id is defined
+    - axway_cft_instance_id == 'workstationaddress'
