--- a/tests/integration/targets/setup_wiremock/tasks/setup_axway_cft_v11.yaml
+++ b/tests/integration/targets/setup_wiremock/tasks/setup_axway_cft_v11.yaml
@@ -11,6 +11,6 @@
     ports:
     - "8443:8443"
     volumes:
-    - "{{ roles_path }}/files/axway_cft_v11:/home/wiremock"
+    - "{{ role_path }}/files/axway_cft_v11:/home/wiremock"
     command: "--disable-http --https-port 8443"
     state: started
