--- a/tests/integration/targets/axway_cft_facts/tasks/httpapi.yaml
+++ b/tests/integration/targets/axway_cft_facts/tasks/httpapi.yaml
@@ -18,3 +18,8 @@
   with_items: "{{ test_items }}"
   loop_control:
     loop_var: test_case_to_run
+
+- name: tearing down test environment
+  include_role:
+    name: setup_wiremock
+    tasks_from: teardown.yaml
