Wait for Wiremock service to be up

--- a/tests/integration/targets/setup_wiremock/tasks/setup_axway_cft_v11.yaml
+++ b/tests/integration/targets/setup_wiremock/tasks/setup_axway_cft_v11.yaml
@@ -14,3 +14,8 @@
     - "{{ role_path }}/files/axway_cft_v11:/home/wiremock"
     command: "--disable-http --https-port 8443"
     state: started
+
+- name: Wait for Wiremock service to be up
+  wait_for:
+    host: localhost
+    port: 8443
