--- a/tests/integration/targets/axway_cft_transfer_info/tests/httpapi/unauthorized.yaml
+++ b/tests/integration/targets/axway_cft_transfer_info/tests/httpapi/unauthorized.yaml
@@ -1,9 +1,10 @@
 ---
-- name: Gathering logs - invalid credentials
+- name: Gathering transfer - invalid credentials
   vars:
     ansible_user: dummy
     ansible_password: dummy
-  community.axway_cft.axway_cft_logs:
+  community.axway_cft.axway_cft_transfer_info:
+    idtu: T1234568
   register: result
   ignore_errors: True
 
@@ -16,11 +17,12 @@
     - result.failed
     - result.msg == exp.msg
 
-- name: Gathering logs - invalid rights
+- name: Gathering transfer - invalid rights
   vars:
     ansible_user: admin
     ansible_password: dummy
-  community.axway_cft.axway_cft_logs:
+  community.axway_cft.axway_cft_transfer_info:
+    idtu: T1234568
   register: result
   ignore_errors: True
 
