Update collection namespace

--- a/tests/integration/targets/axway_cft_about_info/tests/httpapi/info.yaml
+++ b/tests/integration/targets/axway_cft_about_info/tests/httpapi/info.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Gathering info
-  community.axway_cft.axway_cft_about_info:
+  warkdev.axway_cft.axway_cft_about_info:
   register: result
 
 - name: Validate info
