--- a/galaxy.yml
+++ b/galaxy.yml
@@ -2,7 +2,7 @@
 # The namespace of the collection. This can be a company/brand/organization or product namespace under which all
 # content lives. May only contain alphanumeric lowercase characters and underscores. Namespaces cannot start with
 # underscores or numbers and cannot contain consecutive underscores
-namespace: community
+namespace: warkdev
 
 # The name of the collection. Has the same character restrictions as 'namespace'
 name: axway_cft
@@ -39,10 +39,10 @@ dependencies:
   "ansible.netcommon": ">=2.0.0"
 
 # The URL of the originating SCM repository
-repository: https://github.com/Warkdev/community.axway_cft
+repository: https://github.com/Warkdev/ansible-collection-axway_cft
 
 # The URL to the collection issue tracker
-issues: https://github.com/Warkdev/community.axway_cft/issues
+issues: https://github.com/Warkdev/ansible-collection-axway_cft/issues
 
 # A list of file glob-like patterns used to filter any files or directories that should not be included in the build
 # artifact. A pattern is matched from the relative path of the file or directory of the collection directory. This
