--- a/tests/integration/targets/setup_wiremock/tasks/main.yaml
+++ b/tests/integration/targets/setup_wiremock/tasks/main.yaml
@@ -1,3 +1,6 @@
 ---
 - name: Setting up Wiremock for Axway Transfer CFT API v1.1
   include_tasks: setup_axway_cft_v11.yaml
+
+- name: Setting up Wiremock for Axway Transfer CFT API v1.4
+  include_tasks: setup_axway_cft_v14.yaml
