--- a/tests/integration/targets/axway_cft_flows_info/tasks/httpapi.yaml
+++ b/tests/integration/targets/axway_cft_flows_info/tasks/httpapi.yaml
@@ -21,5 +21,5 @@
 
 - name: tearing down test environment
   include_role:
-    name: setup_wiremock
+    name: setup_mock
     tasks_from: teardown.yaml
